Adds http-vuln-cve2015-1635 to detect Microsoft Windows systems vulnerable to MS15-034
git-svn-id: https://svn.nmap.org/nmap@34508 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added http-vuln-cve2015-1635 to detect Microsoft Windows systems 
+  vulnerable to MS15-034. [Paulino Calderon]
+
 o [NSE] Make smb-ls able to leverage results from smb-enum-shares or list of
   shares specified on command line. [Pierre Lalet]
 
